# thisisnonWare

./: .gitignore  docker-compose.yml
backend/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/apps/core/management/commands/: bootstrap.py
backend/apps/notes/: models.py
backend/apps/notes/migrations/: 0001_initial.py  0002_note_image.py
backend/config/: asgi.py  storage_backends.py  urls.py  wsgi.py
backend/config/api/: router.py
backend/config/api/endpoints/: __init__.py  health.py  root.py
backend/config/settings/: base.py  dev.py  prod.py
frontend/: .dockerignore
frontend/app/: page.tsx
