[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "psycopg[binary]>=3.3.4",
    "uvicorn>=0.49.0",
]
