[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "django-storages>=1.14.6",
    "google-cloud-storage>=3.12.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "uvicorn>=0.49.0",
]
